// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Line" renders (dark theme) 1`] = `
<div
  css={[Function]}
>
  <hr
    css={
      {
        "border": "none",
        "borderBottom": "1px solid rgb(213, 214, 214)",
        "marginBottom": "16px",
        "marginTop": "16px",
      }
    }
  >
    Line
  </hr>
</div>
`;

exports[`"Line" renders 1`] = `
<div
  css={[Function]}
>
  <hr
    css={
      {
        "border": "none",
        "borderBottom": "1px solid rgb(213, 214, 214)",
        "marginBottom": "16px",
        "marginTop": "16px",
      }
    }
  >
    Line
  </hr>
</div>
`;

exports[`"Line" renders with color 1`] = `
<div
  css={[Function]}
>
  <hr
    color="#e02020"
    css={
      {
        "border": "none",
        "borderBottom": "1px solid #e02020",
        "marginBottom": "16px",
        "marginTop": "16px",
      }
    }
  >
    Line
  </hr>
</div>
`;
